# autodarma

./: .gitignore  Cargo.toml  README.md  config.toml  test_run.sh
skills/: character_design.md  consistency_check.md  dialogue_polish.md  episode_outline.md  full_review.md  historical_verify.md  plot_outline.md  script_writing.md  skills  story_concept.md  style_enhance.md
src/: agent.rs  config.rs  git.rs  goals.rs  infinite_repair.rs  lib.rs  llm.rs  main.rs  memory.rs  output.rs  quality.rs  skills.rs  tools.rs
src/agent/: dynamic_skill.rs  execution.rs  helpers.rs  mod.rs  pipeline.rs  quality_loop.rs
